--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
                     <input type="text" placeholder="Enter city name" spellcheck="false">
                     <button><img src="weather-app-img/images/search.png" alt="search"></button>
                 </div>
+                <div class="error">
+                    <p>Invalid City Name</p>
+                </div>
                 <div class="weather">
-                    <img src="weather-app-img/images/clear.png" class="weather-icon">
-                    <h1 class="temp">10°C</h1>
-                    <h2 class="city">New York</h2>
+                    <img src="" class="weather-icon">
+                    <h1 class="temp"></h1>
+                    <h2 class="city"></h2>
                     <div class="details">
                         <div class="col">
                             <img src="weather-app-img/images/humidity.png">
                             <div>
-                                <p class="humidity">50%</p>
+                                <p class="humidity"></p>
                                 <p>Humidity</p>
                             </div>
                         </div>
                         <div class="col">
                             <img src="weather-app-img/images/wind.png">
                             <div>
-                                <p class="wind">15 km/h</p>
+                                <p class="wind"></p>
                                 <p>Wind Speed</p>
                             </div>
                         </div>
